@@ -18,7 +18,6 @@ requires 'Scalar::Util' => '0';
 
 requires 'AnyEvent'            => '0';
 requires 'JSON'                => '0';
-requires 'Plack'               => '0';
 requires 'Protocol::SocketIO'  => '0';
 requires 'Protocol::WebSocket' => '0.009006';
 
